--- a/app/nginx/Dockerfile
+++ b/app/nginx/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:stable-alpine
 
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY index.html /etc/nginx/html/index.html
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/index.html /etc/nginx/html/index.html
